--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jquery": "^3.6.0",
     "pinia": "^2.0.9",
     "vue": "^3.2.1",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "3.3.3",
