--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "pinia": "^2.0.9",
     "vue": "^3.2.1",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "3.3.3",
     "@types/jest": "^24.0.19",
     "@types/jquery": "^3.5.13",
+    "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
