--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
     "jquery": "^3.6.0",
+    "lit": "^2.2.0",
     "moment": "^2.29.1",
     "pinia": "^2.0.9",
     "vue": "^3.2.1",
